--- a/backend/package.json
+++ b/backend/package.json
@@ -25,5 +25,10 @@
     "helmet": "^3.14.0",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
