--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "helmet": "^3.14.0",
     "mongoose": "^5.3.4",
+    "mongoose-type-url": "^1.0.4",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
