--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "styled-components": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +29,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0"
   }
