--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-youtube": "^7.8.0",
     "styled-components": "^4.0.0"
   },
   "scripts": {
